# treeCl_EM

./: .gitignore  CMakeLists.txt  Optimiser.cpp  Optimiser.h  PLL.cpp  PLL.h  ValueTable.cpp  ValueTable.h  main.cpp  memory_management.h  partition_search.cpp  partition_search.h  threadpool.cpp  threadpool.h  utils.cpp  utils.h
data/: CMakeLists.txt  conc.partitions.txt  conc.phy  conc.tree
treeCl_EM/treeCl_EM.xcodeproj/: project.pbxproj
treeCl_EM/treeCl_EM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
treeCl_EM/treeCl_EM.xcodeproj/project.xcworkspace/xcshareddata/: treeCl_EM.xccheckout
treeCl_EM/treeCl_EM.xcodeproj/project.xcworkspace/xcuserdata/kgori.xcuserdatad/: UserInterfaceState.xcuserstate
treeCl_EM/treeCl_EM.xcodeproj/xcuserdata/kgori.xcuserdatad/xcschemes/: treeCl_EM.xcscheme  xcschememanagement.plist
